<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="KEY_CITY_NAME">KEY_CITY_NAME</string>
    <string name="KEY_UNITS">KEY_UNITS</string>
    <string name="KEY_CITY_LAT">KEY_CITY_LAT</string>
    <string name="KEY_CITY_LON">KEY_CITY_LON</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="units">Units</string>
    <string name="wind_speed">Wind speed</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
</resources>